--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
       crossorigin="anonymous"
     ></script>
-    <script src="src/assets/js/jquery.min.js"></script>
+    <!-- <script src="src/assets/js/jquery.min.js"></script>
     <script src="src/assets/js/datatables.min.js"></script>
     <script src="src/assets/js/dataTables.buttons.min.js"></script>
     <script src="src/assets/js/buttons.flash.min.js"></script>
@@ -49,6 +49,6 @@
     <script src="src/assets/js/vfs_fonts.js"></script>
     <script src="src/assets/js/buttons.html5.min.js"></script>
     <script src="src/assets/js/buttons.print.min.js"></script>
-    <script src="src/assets/js/pages/datatable/datatable-advanced.init.js"></script>
+    <script src="src/assets/js/datatable-advanced.init.js"></script> -->
   </body>
 </html>
